# spine

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .railwayignore  Dockerfile  pyproject.toml
backend/output/: communities.json  metrics.json
backend/output/people/: "mark_kopinski_intl_acim_americancentury"_at_americancentury_com_at_enron_com.json  '_'dan_at_enron_com.json  '_'gary_at_enron_com.json  '_'jim_at_enron_com.json  '_'pete_at_enron_com.json  '_'shawn_at_enron_com.json  '_'shemin_at_enron_com.json  '_at_enron_com.json  'almeida_at_enron_com.json  'ball_at_enron_com.json  'barry_tycholiz'_at_enron_com.json  'bevans_at_enron_com.json  'cherry_at_enron_com.json  'conway_at_enron_com.json  'david_delainey'_at_enron_com.json  'deberry_at_enron_com.json  'erb_at_enron_com.json  'fenner_at_enron_com.json  'fildes_at_enron_com.json  'fishkin_at_enron_com.json  'franksen_at_enron_com.json  'fulghum_at_enron_com.json  'gill_at_enron_com.json  'hitschel_at_enron_com.json  'hutcheson_at_enron_com.json  'janet_dietrich'_at_enron_com.json  'jernigan_at_enron_com.json  'jewell_at_enron_com.json  'kelly_at_enron_com.json  'ketcherside_at_enron_com.json  'kiske_at_enron_com.json  'kuykendall_at_enron_com.json  'lipper_at_enron_com.json  'love_at_enron_com.json  'macaul_at_enron_com.json  'mack_at_enron_com.json  'mcconnell_at_enron_com.json  'murphy_at_enron_com.json  'nielsen_at_enron_com.json  (+4508 more)
backend/src/: pipeline.py
backend/tests/: conftest.py  test_api.py  test_graph.py  test_metrics.py  test_parser.py  test_rag.py  test_sentiment.py
(+74 files in other folders)
